force-app/main/default/objects/Quote/fields/Effective_Final_Total_Value_Approver__c.field-meta.xml
<CustomField>
    <fullName>Effective_Final_Total_Value_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval-cycle snapshot of the quote-wide highest approver for total value.</description>
    <label>Effective Final Total Value Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Effective_Total_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>