force-app/main/default/objects/Quote/fields/Effective_Final_Validity_Approver__c.field-meta.xml
<CustomField>
    <fullName>Effective_Final_Validity_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval-cycle snapshot of the quote-wide highest approver for validity of offer.</description>
    <label>Effective Final Validity Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Effective_Validity_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>