force-app/main/default/objects/Quote/fields/Effective_Final_Warranty_Approver__c.field-meta.xml
<CustomField>
    <fullName>Effective_Final_Warranty_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval-cycle snapshot of the quote-wide highest approver for warranty terms.</description>
    <label>Effective Final Warranty Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Effective_Warranty_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>