force-app/main/default/objects/Quote/fields/Highest_Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Highest_Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Highest SOA approver required by any active quote or quote-line approval.</description>
    <label>Highest Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Highest_Final_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>