force-app/main/default/objects/Quote/fields/Is_all_approvals_final_approved__c.field-meta.xml
<CustomField>
    <fullName>Is_all_approvals_final_approved__c</fullName>
    <formula>AND(Is_Warranty_Effective_Final__c, Is_Validity_Effective_Final__c, Is_Total_Value_Effective_Final__c, Unapproved_Discount_Count__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is all approvals final approved?</label>
    <type>Checkbox</type>
</CustomField>