force-app/main/default/objects/Quote/fields/Is_Total_Value_Effective_Final__c.field-meta.xml
<CustomField>
    <fullName>Is_Total_Value_Effective_Final__c</fullName>
    <formula>IF(OR(ISNULL(Total_Value__c),Is_Total_Value_Approved__c),TRUE,IF(ISBLANK(Final_Total_Value_Approver__c),TRUE,IF(BLANKVALUE(Effective_Final_Total_Value_Approver__c,Final_Total_Value_Approver__c)=Sales_Manager__c,OR(ISPICKVAL(SM_Value_Status__c,"Approved"),ISPICKVAL(SM_Value_Status__c,"Rejected")),IF(BLANKVALUE(Effective_Final_Total_Value_Approver__c,Final_Total_Value_Approver__c)=Country_Continent_Sales_Head_LOB_Head__c,OR(ISPICKVAL(CH_Value_Status__c,"Approved"),ISPICKVAL(CH_Value_Status__c,"Rejected")),IF(BLANKVALUE(Effective_Final_Total_Value_Approver__c,Final_Total_Value_Approver__c)=Global_Sales_Head__c,OR(ISPICKVAL(GS_Value_Status__c,"Approved"),ISPICKVAL(GS_Value_Status__c,"Rejected")),IF(BLANKVALUE(Effective_Final_Total_Value_Approver__c,Final_Total_Value_Approver__c)=Rotex_Board_Member__c,OR(ISPICKVAL(BM_Value_Status__c,"Approved"),ISPICKVAL(BM_Value_Status__c,"Rejected")),IF(BLANKVALUE(Effective_Final_Total_Value_Approver__c,Final_Total_Value_Approver__c)=Managing_Director_Country_Manager__c,OR(ISPICKVAL(MD_Value_Status__c,"Approved"),ISPICKVAL(MD_Value_Status__c,"Rejected")),FALSE)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Total Value Effective Final</label>
    <type>Checkbox</type>
</CustomField>